# CompareCompilers

./: CMakeLists.txt  README.md  amd.bash  build.bash
c++/: CMakeLists.txt
c++/jacobiSolve/: CMakeLists.txt  SConstruct  Visualize.py  critical.cpp  grid.cpp  grid.hpp  jacobi.cpp  jacobi.hpp  jacobiSolve.cpp  mpl_settings.py
c++/jacobiSolve/WIP/: ColumnMajorStorage.hpp  Grid.hpp  LinearContiguousStorage.hpp  RowMajorStorage.hpp  SConstruct  Storage.hpp  main.cpp
c++/jacobiSolve/test/: testJacobi.cpp
c++/luDecomp/: CMakeLists.txt  SConstruct  critical.cpp  critical.hpp  luDecomp.cpp
c++/sfComp/: SConstruct  critical.cpp  critical.hpp  sfComp.cpp
python/: c++Runner.py  dataPlotter.py  mpl_settings.py  plotBarGraph.py  run-c++Runner.sh  timingData.py
